# sharded-array-for-python

./: .bandit.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conda-env.txt  conda-env.yml  export-ddpt_rt.txt  export-sharpy_rt.txt  export.txt  imex_version.txt  setup.py
.github/workflows/: ci.yml  pre-commit.yml
conda-recipe/: build.sh  imex_findsycl.patch  meta.yaml
ddptensor/: __init__.py  array_api.py  ddptensor.py  random.py  spmd.py
ddptensor/numpy/: __init__.py  random.py
ddptensor/torch/: __init__.py
docker/: Dockerfile  Makefile
examples/: black_scholes.py  rambo.py  shallow_water.py  stencil-2d.py  transpose.py  transposed3d.py  wave_equation.py
scripts/: code_gen.py
sharpy/: __init__.py  array_api.py  ndarray.py  random.py  spmd.py
sharpy/numpy/: __init__.py  random.py
sharpy/random/: __init__.py
sharpy/torch/: __init__.py
src/: BodyBuilder.cpp  CollComm.cpp  Creator.cpp  DDPTensorImpl.cpp  Deferred.cpp  EWBinOp.cpp  EWUniyOp.cpp  EWUnyOp.cpp  Factory.cpp  IEWBinOp.cpp  IO.cpp  LinAlgOp.cpp  MPIMediator.cpp  MPITransceiver.cpp  ManipOp.cpp  Mediator.cpp  NDArray.cpp  PVSlice.cpp  Random.cpp  ReduceOp.cpp  Registry.cpp  Replicate.cpp  Service.cpp  SetGetItem.cpp  Transceiver.cpp  _deferred.cpp  _sharpy.cpp  ddptensor.cpp  idtr.cpp
src/include/ddptensor/: Broadcast.hpp  Chunker.hpp  CollComm.hpp  CppTypes.hpp  Creator.hpp  DDPTensorImpl.hpp  Deferred.hpp  EWBinOp.hpp  EWUnyOp.hpp  Factory.hpp  IEWBinOp.hpp  IO.hpp  LinAlgOp.hpp  MPIMediator.hpp  MPITransceiver.hpp  ManipOp.hpp  Mediator.hpp  MemRefType.hpp  NDIndex.hpp  NDSlice.hpp  Operations.hpp  PVSlice.hpp  PyTypes.hpp  Random.hpp  ReduceOp.hpp  Registry.hpp  Replicate.hpp  Service.hpp  SetGetItem.hpp  Slice.hpp  Sorting.hpp  Transceiver.hpp  TypeDispatch.hpp  TypePromotion.hpp  UtilsAndTypes.hpp  ddptensor.hpp  ddptensor_impl.hpp  idtr.hpp  p2c_ids.hpp  tensor_i.hpp  (+1 more)
src/include/ddptensor/jit/: mlir.hpp
src/include/ddptensor/old/: x.hpp
src/include/sharpy/: BodyBuilder.hpp  Broadcast.hpp  Chunker.hpp  CollComm.hpp  CppTypes.hpp  Creator.hpp  Deferred.hpp  EWBinOp.hpp  EWUnyOp.hpp  Factory.hpp  FutureArray.hpp  IEWBinOp.hpp  IO.hpp  LinAlgOp.hpp  MPIMediator.hpp  MPITransceiver.hpp  ManipOp.hpp  Mediator.hpp  MemRefType.hpp  NDArray.hpp  NDIndex.hpp  NDSlice.hpp  PVSlice.hpp  PyTypes.hpp  Random.hpp  ReduceOp.hpp  Registry.hpp  Service.hpp  SetGetItem.hpp  Slice.hpp  Sorting.hpp  Transceiver.hpp  TypeDispatch.hpp  UtilsAndTypes.hpp  array_i.hpp  itac.hpp
src/include/sharpy/jit/: DepManager.hpp  mlir.hpp
src/jit/: DepManager.cpp  mlir.cpp
test/: conftest.py  misc.py  stencil-2d.py  test_create.py  test_ewb.py  test_ewu.py  test_het.py  test_iewb.py  test_io.py  test_linalg.py  test_manip.py  test_permute.py  test_random.py  test_red.py  test_scalar.py  test_set.py  test_setget.py  test_spmd.py  test_temparray.py  test_ui.py  test_x.py  utils.py
